# quickbrain

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/openclaw-quickbrain/: SKILL.md
skills/openclaw-quickbrain/references/: API.md
skills/openclaw-quickbrain/scripts/: quickbrain_search.py
src/quickbrain/: __init__.py  __main__.py  cli.py  dedup.py  eval.py  search.py  synthesize.py
src/quickbrain/action/: __init__.py  github.py  notify.py
src/quickbrain/scorer/: __init__.py  confidence.py  embedding.py  relevance.py
src/quickbrain/sources/: __init__.py  brave_search.py  exa_search.py  github_trending.py  hackernews.py  reddit.py  web_fetch.py
tests/: test_cli.py  test_dedup.py  test_eval.py  test_new_sources.py  test_reddit.py  test_scorer.py  test_search.py  test_synthesize.py
