[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbrain"
version = "0.1.0"
description = "Fast, lightweight research agent — grounded summaries in 10-30 seconds"
authors = [{ name = "codeorbitio-dot" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "exa-py>=2.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "ruff"]

[project.scripts]
quickbrain = "quickbrain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
